--- a/src/Erlkönig.Client/wwwroot/main.html
+++ b/src/Erlkönig.Client/wwwroot/main.html
@@ -45,21 +45,9 @@
         </div>
       </template>
 
-      <template id="Counter">
-        <h1 class="title">A simple counter</h1>
-        <p>
-          <button onclick="${Decrement}" class="button">-</button>
-          <input type="number" id="counter" class="input" bind="${Value}">
-          <button onclick="${Increment}" class="button">+</button>
-        </p>
-        <p>
-          The counter's value is: ${Value}
-        </p>
-      </template>
-
-      <template id="Data">
+      <template id="Pkmn">
         <h1 class="title">
-          Download data
+          Download Pokemon
           <button class="button" onclick="${Reload}">Reload</button>
         </h1>
         <p>
@@ -69,16 +57,19 @@
         <table class="table is-fullwidth">
           <thead>
             <tr>
-              <th>Title</th>
-              <th>Author</th>
-              <th>Published</th>
-              <th>ISBN</th>
+              <th>Species</th>
+              <th>Name</th>
+              <th>Level</th>
+              <th>Ability</th>
+              <th>Box</th>
             </tr>
           </thead>
           <tbody>
             ${Rows}
             <template id="EmptyData">
-              <tr><td colspan="4">Downloading book list...</td></tr>
+              <tr>
+                <td colspan="4">Downloading boxed Pokemon...</td>
+              </tr>
             </template>
           </tbody>
         </table>
